feat: migrate to use async job handling framework from generic
